glx/testdata/invalid/custom-vocab-edge-cases/relationships/rel-custom.glx
relationships:
  rel-custom:
    type: unknown-rel-type
    participants:
      - person: person-custom
        role: custom-role
    properties:
      custom_rel_prop: "value"


